# ekatra

./: .gitignore  CMakeLists.txt  MergeManager.cpp  MergeManager.h  README.md  main.cpp
.cache/clangd/index/: MergeManager.cpp.46FC7FDA1C9FA68D.idx  MergeManager.h.95CD7A22D2343D35.idx  MergeManager_test.cpp.5203B30B732FED96.idx  argparse.hpp.9E65EFDCD37EABEB.idx  main.cpp.8E9160669B337A6A.idx
.github/workflows/: build_and_test.yml  release.yml
src/: MergeManager.cpp  MergeManager.h  main.cpp
src/ProgressBar/: ProgressBar.cpp  ProgressBar.h
src/ProgressReporter/: ProgressReporter.cpp  ProgressReporter.h
tests/: MergeManager_test.cpp
